// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insetBlockStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders function 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: hasnot;
  -ms-intb-rlock-start: hasnot;
  inset-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: has;
  -ms-intb-rlock-start: has;
  inset-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: hasnot;
  -ms-intb-rlock-start: hasnot;
  inset-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: has;
  -ms-intb-rlock-start: has;
  inset-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: invalid.path.1;
  -ms-intb-rlock-start: invalid.path.1;
  inset-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: invalid.path.1;
  -ms-intb-rlock-start: invalid.path.1;
  inset-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: invalid.path.1;
  -ms-intb-rlock-start: invalid.path.1;
  inset-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: invalid.path.1;
  -ms-intb-rlock-start: invalid.path.1;
  inset-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders negative number 1`] = `
Array [
  .c0 {
  inset-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: January;
  -ms-intb-rlock-start: January;
  inset-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: January;
  -ms-intb-rlock-start: January;
  inset-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: July;
    -ms-intb-rlock-start: July;
    inset-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: July;
    -ms-intb-rlock-start: July;
    inset-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

@media May {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

@media May {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: April;
  -ms-intb-rlock-start: April;
  inset-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: January;
    -ms-intb-rlock-start: January;
    inset-block-start: January;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: April;
  -ms-intb-rlock-start: April;
  inset-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: January;
    -ms-intb-rlock-start: January;
    inset-block-start: January;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-inset-block-start: July;
    -ms-intb-rlock-start: July;
    inset-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-inset-block-start: July;
    -ms-intb-rlock-start: July;
    inset-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: September;
    -ms-intb-rlock-start: September;
    inset-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: November;
    -ms-intb-rlock-start: November;
    inset-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: August;
    -ms-intb-rlock-start: August;
    inset-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-inset-block-start: January;
    -ms-intb-rlock-start: January;
    inset-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-inset-block-start: January;
    -ms-intb-rlock-start: January;
    inset-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: December;
    -ms-intb-rlock-start: December;
    inset-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-inset-block-start: April;
    -ms-intb-rlock-start: April;
    inset-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-inset-block-start: May;
    -ms-intb-rlock-start: May;
    inset-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-inset-block-start: June;
    -ms-intb-rlock-start: June;
    inset-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: 54881;
  -ms-intb-rlock-start: 54881;
  inset-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 54881;
  -ms-intb-rlock-start: 54881;
  inset-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 42365;
  -ms-intb-rlock-start: 42365;
  inset-block-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: 42365;
  -ms-intb-rlock-start: 42365;
  inset-block-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders string 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: July;
  -ms-intb-rlock-start: July;
  inset-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: June;
  -ms-intb-rlock-start: June;
  inset-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: June;
  -ms-intb-rlock-start: June;
  inset-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlockStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`insetBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-inset-block-start: DarkSlateBlue;
  -ms-intb-rlock-start: DarkSlateBlue;
  inset-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: DarkSlateBlue;
  -ms-intb-rlock-start: DarkSlateBlue;
  inset-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: DarkSlateBlue;
  -ms-intb-rlock-start: DarkSlateBlue;
  inset-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block-start: DarkSlateBlue;
  -ms-intb-rlock-start: DarkSlateBlue;
  inset-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
